@@ -54,7 +54,7 @@ name|java
 operator|.
 name|util
 operator|.
-name|HashSet
+name|Map
 import|;
 end_import
 
@@ -518,21 +518,13 @@ operator|.
 name|MIN_VALUE
 decl_stmt|;
 comment|// TODO: more efficient?
-name|HashSet
-argument_list|<
-name|Long
-argument_list|>
+name|NormMap
 name|uniqueValues
 init|=
-literal|null
-decl_stmt|;
-name|uniqueValues
-operator|=
 operator|new
-name|HashSet
-argument_list|<>
+name|NormMap
 argument_list|()
-expr_stmt|;
+decl_stmt|;
 name|long
 name|count
 init|=
@@ -622,7 +614,6 @@ condition|(
 name|uniqueValues
 operator|.
 name|size
-argument_list|()
 operator|>
 literal|256
 condition|)
@@ -674,7 +665,6 @@ operator|&&
 name|uniqueValues
 operator|.
 name|size
-argument_list|()
 operator|==
 literal|1
 condition|)
@@ -726,7 +716,6 @@ argument_list|(
 name|uniqueValues
 operator|.
 name|size
-argument_list|()
 operator|-
 literal|1
 argument_list|)
@@ -851,43 +840,13 @@ operator|.
 name|VERSION_CURRENT
 argument_list|)
 expr_stmt|;
-name|Long
+name|long
 index|[]
 name|decode
 init|=
 name|uniqueValues
 operator|.
-name|toArray
-argument_list|(
-operator|new
-name|Long
-index|[
-name|uniqueValues
-operator|.
-name|size
-argument_list|()
-index|]
-argument_list|)
-decl_stmt|;
-name|Arrays
-operator|.
-name|sort
-argument_list|(
-name|decode
-argument_list|)
-expr_stmt|;
-specifier|final
-name|HashMap
-argument_list|<
-name|Long
-argument_list|,
-name|Integer
-argument_list|>
-name|encode
-init|=
-operator|new
-name|HashMap
-argument_list|<>
+name|getDecodeTable
 argument_list|()
 decl_stmt|;
 comment|// upgrade to power of two sized array
@@ -930,18 +889,6 @@ name|decode
 index|[
 name|i
 index|]
-argument_list|)
-expr_stmt|;
-name|encode
-operator|.
-name|put
-argument_list|(
-name|decode
-index|[
-name|i
-index|]
-argument_list|,
-name|i
 argument_list|)
 expr_stmt|;
 block|}
@@ -1022,9 +969,9 @@ name|writer
 operator|.
 name|add
 argument_list|(
-name|encode
+name|uniqueValues
 operator|.
-name|get
+name|getOrd
 argument_list|(
 name|nv
 operator|.
@@ -1341,6 +1288,338 @@ operator|new
 name|UnsupportedOperationException
 argument_list|()
 throw|;
+block|}
+comment|// specialized deduplication of long->ord for norms: 99.99999% of the time this will be a single-byte range.
+DECL|class|NormMap
+specifier|static
+class|class
+name|NormMap
+block|{
+comment|// we use short: at most we will add 257 values to this map before its rejected as too big above.
+DECL|field|singleByteRange
+name|short
+index|[]
+name|singleByteRange
+init|=
+operator|new
+name|short
+index|[
+literal|256
+index|]
+decl_stmt|;
+DECL|field|other
+name|Map
+argument_list|<
+name|Long
+argument_list|,
+name|Short
+argument_list|>
+name|other
+init|=
+operator|new
+name|HashMap
+argument_list|<
+name|Long
+argument_list|,
+name|Short
+argument_list|>
+argument_list|()
+decl_stmt|;
+DECL|field|size
+name|int
+name|size
+decl_stmt|;
+block|{
+name|Arrays
+operator|.
+name|fill
+argument_list|(
+name|singleByteRange
+argument_list|,
+operator|(
+name|short
+operator|)
+operator|-
+literal|1
+argument_list|)
+expr_stmt|;
+block|}
+comment|/** adds an item to the mapping. returns true if actually added */
+DECL|method|add
+specifier|public
+name|boolean
+name|add
+parameter_list|(
+name|long
+name|l
+parameter_list|)
+block|{
+assert|assert
+name|size
+operator|<=
+literal|256
+assert|;
+comment|// once we add> 256 values, we nullify the map in addNumericField and don't use this strategy
+if|if
+condition|(
+name|l
+operator|>=
+name|Byte
+operator|.
+name|MIN_VALUE
+operator|&&
+name|l
+operator|<=
+name|Byte
+operator|.
+name|MAX_VALUE
+condition|)
+block|{
+name|int
+name|index
+init|=
+call|(
+name|int
+call|)
+argument_list|(
+name|l
+operator|+
+literal|128
+argument_list|)
+decl_stmt|;
+name|short
+name|previous
+init|=
+name|singleByteRange
+index|[
+name|index
+index|]
+decl_stmt|;
+if|if
+condition|(
+name|previous
+operator|<
+literal|0
+condition|)
+block|{
+name|singleByteRange
+index|[
+name|index
+index|]
+operator|=
+operator|(
+name|short
+operator|)
+name|size
+expr_stmt|;
+name|size
+operator|++
+expr_stmt|;
+return|return
+literal|true
+return|;
+block|}
+else|else
+block|{
+return|return
+literal|false
+return|;
+block|}
+block|}
+else|else
+block|{
+if|if
+condition|(
+operator|!
+name|other
+operator|.
+name|containsKey
+argument_list|(
+name|l
+argument_list|)
+condition|)
+block|{
+name|other
+operator|.
+name|put
+argument_list|(
+name|l
+argument_list|,
+operator|(
+name|short
+operator|)
+name|size
+argument_list|)
+expr_stmt|;
+name|size
+operator|++
+expr_stmt|;
+return|return
+literal|true
+return|;
+block|}
+else|else
+block|{
+return|return
+literal|false
+return|;
+block|}
+block|}
+block|}
+comment|/** gets the ordinal for a previously added item */
+DECL|method|getOrd
+specifier|public
+name|int
+name|getOrd
+parameter_list|(
+name|long
+name|l
+parameter_list|)
+block|{
+if|if
+condition|(
+name|l
+operator|>=
+name|Byte
+operator|.
+name|MIN_VALUE
+operator|&&
+name|l
+operator|<=
+name|Byte
+operator|.
+name|MAX_VALUE
+condition|)
+block|{
+name|int
+name|index
+init|=
+call|(
+name|int
+call|)
+argument_list|(
+name|l
+operator|+
+literal|128
+argument_list|)
+decl_stmt|;
+return|return
+name|singleByteRange
+index|[
+name|index
+index|]
+return|;
+block|}
+else|else
+block|{
+comment|// NPE if something is screwed up
+return|return
+name|other
+operator|.
+name|get
+argument_list|(
+name|l
+argument_list|)
+return|;
+block|}
+block|}
+comment|/** retrieves the ordinal table for previously added items */
+DECL|method|getDecodeTable
+specifier|public
+name|long
+index|[]
+name|getDecodeTable
+parameter_list|()
+block|{
+name|long
+name|decode
+index|[]
+init|=
+operator|new
+name|long
+index|[
+name|size
+index|]
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|singleByteRange
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|short
+name|s
+init|=
+name|singleByteRange
+index|[
+name|i
+index|]
+decl_stmt|;
+if|if
+condition|(
+name|s
+operator|>=
+literal|0
+condition|)
+block|{
+name|decode
+index|[
+name|s
+index|]
+operator|=
+name|i
+operator|-
+literal|128
+expr_stmt|;
+block|}
+block|}
+for|for
+control|(
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|Long
+argument_list|,
+name|Short
+argument_list|>
+name|entry
+range|:
+name|other
+operator|.
+name|entrySet
+argument_list|()
+control|)
+block|{
+name|decode
+index|[
+name|entry
+operator|.
+name|getValue
+argument_list|()
+index|]
+operator|=
+name|entry
+operator|.
+name|getKey
+argument_list|()
+expr_stmt|;
+block|}
+return|return
+name|decode
+return|;
+block|}
 block|}
 block|}
 end_class
